<resources>
    <string name="app_name">简聊</string>
    <string name="into">进入简聊</string>

    <string name="msg">消息</string>
    <string name="cloud_file">云文件</string>
    <string name="manage">管理</string>

    <string name="go_back">返回</string>
    <string name="tip1">输入你要发送的消息</string>

    <string name="tip2">请输入你的账号</string>
    <string name="tip3">密码</string>
    <string name="tip4">记住密码</string>

    <string name="send">发送</string>

    <string name="login_btn">登录</string>
    <string name="use">使用条款</string>
    <string name="new_user">新用户</string>

    <string name="new_user_sign">新用户注册</string>
    <string name="new_user_nick">新用户昵称</string>
    <string name="new_user_password">密码</string>
    <string name="new_user_sure">注册新用户</string>

    <string name="myself">个人中心</string>
    <string name="edit">编辑个人信息</string>
    <string name="login_out">退出登录</string>

    <string name="net_error">服务器无法连接，请检查网络！</string>

    <string name="add_friend">加好友</string>
    <string name="scan">扫一扫</string>

    <string name="creat_dir">创建文件夹</string>
</resources>
