<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>
    <EditText
        android:id="@+id/account"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/tip2"
        android:textSize="20sp"
        android:drawableLeft="@drawable/zhanghao"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:maxLength="18"
        android:background="@drawable/edittext"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/tip3"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:drawableLeft="@drawable/guanbi"
        android:layout_below="@+id/account"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="@drawable/edittext"/>
    <CheckBox
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip4"
        android:textSize="15sp"
        android:layout_below="@id/password"
        android:layout_alignRight="@id/password"
        android:layout_marginTop="10dp"
        android:checked="true"/>
    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/login_btn"
        android:textSize="25sp"
        android:layout_below="@id/password"
        android:textColor="#fff"
        android:background="@drawable/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/sign_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="15sp"/>
    </LinearLayout>
</RelativeLayout>