<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="返回"
            android:textSize="20sp"
            android:drawableLeft="@drawable/fanhui"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign"
            android:textSize="25sp"
            android:textColor="#3399ff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/new_account"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/new_user_nick"
        android:textSize="20sp"
        android:layout_below="@+id/account"
        android:layout_marginTop="130dp"
        android:layout_gravity="center"
        android:singleLine="true"
        android:background="@drawable/edittext"/>
    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/new_user_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:background="@drawable/edittext"/>
    <Button
        android:id="@+id/sign_to"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/new_user_sure"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:background="@drawable/login_btn"
        android:layout_marginTop="50dp"/>
</LinearLayout>