<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/fanhui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textSize="20sp"
            android:drawableLeft="@drawable/fanhui"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:textColor="#3399ff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
<!--    <ListView-->
<!--        android:layout_below="@id/rl1"-->
<!--        android:layout_above="@id/rl2"-->
<!--        android:id="@+id/list_msg"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->
    <TextView
        android:layout_below="@id/rl1"
        android:layout_above="@id/rl2"
        android:id="@+id/list_msg"
        android:text=""
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/send_msg"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:hint="@string/tip1"
            android:background="@drawable/edittext"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/send"
            android:layout_toRightOf="@id/send_msg"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/send"
            android:textSize="15sp"
            android:textColor="#fff"
            android:layout_marginLeft="15dp"
            android:background="@drawable/login_btn"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>