<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
<!--        <TextView-->
<!--            android:id="@+id/friend_tv"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:drawableRight="@drawable/lianxiren"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginLeft="10dp"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myself"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#3399ff"/>
        <TextView
            android:id="@+id/app_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/shezhi"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/my_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lianxiren"/>
        <TextView
            android:id="@+id/my_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/my_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="30sp"
            android:textColor="#000000"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/accnut"
            android:layout_below="@id/my_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/my_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="15sp"
            android:singleLine="true"/>
        <TextView
            android:id="@+id/mycontext_wrap"
            android:layout_below="@id/accnut"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/my_image"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="15sp"
            android:singleLine="false"
            android:maxLines="2"/>
        <TextView
            android:id="@+id/editmsg"
            android:layout_below="@id/mycontext_wrap"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:padding="20dp" />
        <Button
            android:id="@+id/loginout"
            android:layout_below="@id/editmsg"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/login_out"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/loginout_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</LinearLayout>